argocd/ddns/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddns
  labels:
    app.kubernetes.io/name: ddns
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ddns
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ddns
    spec:
      serviceAccountName: default
      containers:
      - name: ddns
        image: "qmcgaw/ddns-updater:v2.6.0"
        imagePullPolicy: Always
        ports:
        - protocol: TCP
          name: http
          containerPort: 6500
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        volumeMounts:
        - mountPath: /updater/data
          name: data
      volumes:
      - hostPath:
          path: /hot-1/apps/ddns-updater/data
          type: Directory
        name: data
