argocd/ddns/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddns
  labels:
    app.kubernetes.io/name: ddns
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: http
  selector:
    app.kubernetes.io/name: ddns
